@startuml diagrama_classes

class User {
  -id: int
  -name: string
  -email: string
  -password: string
  -role: string <<enum>>
  +createTicket(name: string, description: string, category: Category): Ticket
  +respondToTicket(ticket: Ticket, message: string): Response
}

class Ticket {
  -id: int
  -title: string
  -description: string
  -status: string <<enum>>
  -priority: string <<enum>>
  -opened_at: DateTime
  -closed_at: DateTime
  -user: User
  -category: Category
  +closeTicket(): void
  +changeStatus(newStatus: string): void
}

class Category {
  -id: int
  -name: string
  +addCategory(name: string): Category
}

class Response {
  -id: int
  -message: string
  -date: DateTime
  -user: User
  -ticket: Ticket
  +addResponse(ticket: Ticket, user: User, message: string): Response
}

' Relações
User "1" -- "*" Ticket : "opens"
User "1" -- "*" Response : "sends"
Ticket "1" -- "*" Response : "has"
Ticket "*" -- "1" Category : "belongs to"

@enduml
